--- a/dso_product_portfolio.html
+++ b/dso_product_portfolio.html
@@ -1066,7 +1066,7 @@
                 <div class="name">Albert Kim</div>
                 <div class="role">Senior Vice President · Transfer & Bonding Material Division</div>
                 <div class="info">
-                    <span>📧 <a href="mailto:albert@daesangst.com">albert@daesangst.com</a></span>
+                    <span>📧 <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
                     <span>📞 +82-2-2631-4475</span>
                 </div>
             </div>
@@ -1318,7 +1318,7 @@
                 <div class="title">Senior Vice President</div>
                 <div class="division">Transfer & Bonding Material Division · Daesang ST</div>
                 <div class="contact-detail">
-                    <span>📧 <a href="mailto:albert@daesangst.com">albert@daesangst.com</a></span>
+                    <span>📧 <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
                     <span>📞 +82-2-2631-4475</span>
                     <span>📍 Seoul, South Korea</span>
                 </div>
@@ -1679,7 +1679,7 @@
                 <div class="title">Senior Vice President</div>
                 <div class="division">Transfer & Bonding Material Division · Daesang ST</div>
                 <div class="contact-detail">
-                    <span>📧 <a href="mailto:albert@daesangst.com">albert@daesangst.com</a></span>
+                    <span>📧 <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
                     <span>📞 +82-2-2631-4475</span>
                     <span>📍 Seoul, South Korea</span>
                 </div>
