--- a/email_template.html
+++ b/email_template.html
@@ -442,7 +442,7 @@
                     <div class="name">Albert Kim</div>
                     <div class="role">Senior Vice President · Transfer & Bonding Material Division</div>
                     <div class="info">
-                        📧 <a href="mailto:albert@daesangst.com">albert@daesangst.com</a> &nbsp;·&nbsp;
+                        📧 <a href="mailto:akim@daesangst.com">akim@daesangst.com</a> &nbsp;·&nbsp;
                         📞 +82-2-2631-4475
                     </div>
                 </div>
