--- a/hotfix_product_detail.html
+++ b/hotfix_product_detail.html
@@ -1017,7 +1017,7 @@
             <div class="title">Senior Vice President</div>
             <div class="division">Transfer & Bonding Material Division · Daesang ST</div>
             <div class="contact-detail">
-                <span>📧 <a href="mailto:albert@daesangst.com">albert@daesangst.com</a></span>
+                <span>📧 <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
                 <span>📞 +82-2-2631-4475</span>
                 <span>📍 Seoul, South Korea</span>
             </div>
