--- a/email_template.html
+++ b/email_template.html
@@ -439,11 +439,12 @@
                 <p class="body-text" style="margin-bottom:24px;">Whether you need samples, a custom quote, or want to
                     explore our VMI services — we're here to help.</p>
                 <div class="contact-highlight">
-                    <div class="name">Albert Kim</div>
-                    <div class="role">Senior Vice President · Transfer & Bonding Material Division</div>
-                    <div class="info">
-                        📧 <a href="mailto:akim@daesangst.com">akim@daesangst.com</a> &nbsp;·&nbsp;
-                        📞 +82-2-2631-4475
+                    <div class="info" style="line-height: 2.2; font-size: 13px;">
+                        📧 <strong>Latin America / US / Asia:</strong> <a
+                            href="mailto:lanil3320@daesangst.com">lanil3320@daesangst.com</a><br>
+                        📧 <strong>EU / Australia / Asia:</strong> <a
+                            href="mailto:kayjung@daesangst.com">kayjung@daesangst.com</a><br>
+                        📧 <strong>Leader:</strong> <a href="mailto:akim@daesangst.com">akim@daesangst.com</a>
                     </div>
                 </div>
                 <a href="https://www.dso-co.com/eng/sub_customer/inquiry.php" class="cta-button" target="_blank">Request
