--- a/dso_product_portfolio.html
+++ b/dso_product_portfolio.html
@@ -1063,11 +1063,12 @@
             <p class="body-text" style="margin-bottom:24px;">Whether you need samples, a custom quote, or want to
                 explore our VMI services — we're here to help.</p>
             <div class="contact-highlight">
-                <div class="name">Albert Kim</div>
-                <div class="role">Senior Vice President · Transfer & Bonding Material Division</div>
-                <div class="info">
-                    <span>📧 <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
-                    <span>📞 +82-2-2631-4475</span>
+                <div class="info" style="line-height: 2.2; font-size: 13px;">
+                    📧 <strong>Latin America / US / Asia:</strong> <a
+                        href="mailto:lanil3320@daesangst.com">lanil3320@daesangst.com</a><br>
+                    📧 <strong>EU / Australia / Asia:</strong> <a
+                        href="mailto:kayjung@daesangst.com">kayjung@daesangst.com</a><br>
+                    📧 <strong>Leader:</strong> <a href="mailto:akim@daesangst.com">akim@daesangst.com</a>
                 </div>
             </div>
             <a href="https://www.dso-co.com/eng/sub_customer/inquiry.php" class="btn btn-gold" target="_blank">Request
@@ -1314,13 +1315,14 @@
             <div class="section-label" style="margin-bottom:12px;">Request Samples or Quote</div>
             <div class="section-title" style="margin-bottom:32px;">Ready to Explore Our HTV Solutions?</div>
             <div class="contact-card">
-                <div class="name">Albert Kim</div>
-                <div class="title">Senior Vice President</div>
-                <div class="division">Transfer & Bonding Material Division · Daesang ST</div>
-                <div class="contact-detail">
-                    <span>📧 <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
-                    <span>📞 +82-2-2631-4475</span>
-                    <span>📍 Seoul, South Korea</span>
+                <div class="name">Transfer & Bonding Material Division</div>
+                <div class="division">Daesang ST · Seoul, South Korea</div>
+                <div class="contact-detail" style="flex-direction: column; gap: 8px; align-items: center;">
+                    <span>📧 <strong>Latin America / US / Asia:</strong> <a
+                            href="mailto:lanil3320@daesangst.com">lanil3320@daesangst.com</a></span>
+                    <span>📧 <strong>EU / Australia / Asia:</strong> <a
+                            href="mailto:kayjung@daesangst.com">kayjung@daesangst.com</a></span>
+                    <span>📧 <strong>Leader:</strong> <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
                 </div>
             </div>
             <div class="btn-row">
@@ -1675,13 +1677,14 @@
             <div class="section-label" style="margin-bottom:12px;">Request Samples or Quote</div>
             <div class="section-title" style="margin-bottom:32px;">Need the Right Hotfix Film for Your Process?</div>
             <div class="contact-card">
-                <div class="name">Albert Kim</div>
-                <div class="title">Senior Vice President</div>
-                <div class="division">Transfer & Bonding Material Division · Daesang ST</div>
-                <div class="contact-detail">
-                    <span>📧 <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
-                    <span>📞 +82-2-2631-4475</span>
-                    <span>📍 Seoul, South Korea</span>
+                <div class="name">Transfer & Bonding Material Division</div>
+                <div class="division">Daesang ST · Seoul, South Korea</div>
+                <div class="contact-detail" style="flex-direction: column; gap: 8px; align-items: center;">
+                    <span>📧 <strong>Latin America / US / Asia:</strong> <a
+                            href="mailto:lanil3320@daesangst.com">lanil3320@daesangst.com</a></span>
+                    <span>📧 <strong>EU / Australia / Asia:</strong> <a
+                            href="mailto:kayjung@daesangst.com">kayjung@daesangst.com</a></span>
+                    <span>📧 <strong>Leader:</strong> <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
                 </div>
             </div>
             <div class="btn-row">
