--- a/htv_product_detail.html
+++ b/htv_product_detail.html
@@ -811,13 +811,14 @@
         <div class="section-label" style="margin-bottom:12px;">Request Samples or Quote</div>
         <div class="section-title" style="margin-bottom:32px;">Ready to Explore Our HTV Solutions?</div>
         <div class="contact-card">
-            <div class="name">Albert Kim</div>
-            <div class="title">Senior Vice President</div>
-            <div class="division">Transfer & Bonding Material Division · Daesang ST</div>
-            <div class="contact-detail">
-                <span>📧 <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
-                <span>📞 +82-2-2631-4475</span>
-                <span>📍 Seoul, South Korea</span>
+            <div class="name">Transfer & Bonding Material Division</div>
+            <div class="division">Daesang ST · Seoul, South Korea</div>
+            <div class="contact-detail" style="flex-direction: column; gap: 8px; align-items: center;">
+                <span>📧 <strong>Latin America / US / Asia:</strong> <a
+                        href="mailto:lanil3320@daesangst.com">lanil3320@daesangst.com</a></span>
+                <span>📧 <strong>EU / Australia / Asia:</strong> <a
+                        href="mailto:kayjung@daesangst.com">kayjung@daesangst.com</a></span>
+                <span>📧 <strong>Leader:</strong> <a href="mailto:akim@daesangst.com">akim@daesangst.com</a></span>
             </div>
         </div>
         <div class="btn-row">
