--- a/htv_product_detail.html
+++ b/htv_product_detail.html
@@ -561,7 +561,7 @@
 
 <body>
 
-    <a href="linkedin_brochure.html" class="back-link">← Back to Overview</a>
+    <a href="dso_product_portfolio.html" class="back-link">← Back to Overview</a>
 
     <!-- HERO -->
     <section class="hero">
