--- a/hotfix_product_detail.html
+++ b/hotfix_product_detail.html
@@ -627,7 +627,7 @@
 
 <body>
 
-    <a href="dso_product_portfolio.html" class="back-link">← Back to Overview</a>
+    <a href="email_template.html" class="back-link">← Back to Overview</a>
 
     <!-- HERO -->
     <section class="hero">
